--- a/src/assets/sass/index.css
+++ b/src/assets/sass/index.css
@@ -721,3 +721,24 @@ code a:hover {
   font-size: 20px;
   cursor: pointer;
 }
+
+::-webkit-scrollbar-track-piece {
+  background-color: #f8f8f8;
+  border-radius: 16px;
+}
+
+::-webkit-scrollbar {
+  width: 9px;
+  height: 9px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.5);
+  background-clip: padding-box;
+  min-height: 28px;
+  border-radius: 16px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #bbb;
+}
