--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -344,3 +344,20 @@ code {
   font-size: 20px;
   cursor: pointer;
 }
+::-webkit-scrollbar-track-piece { //滚动条凹槽的颜色，还可以设置边框属性
+background-color:#f8f8f8;
+border-radius: 16px;
+}
+::-webkit-scrollbar {//滚动条的宽度
+width:9px;
+height:9px;
+}
+::-webkit-scrollbar-thumb {//滚动条的设置
+background-color: rgba(0,0,0, 0.5);
+background-clip:padding-box;
+min-height:28px;
+border-radius: 16px;
+}
+::-webkit-scrollbar-thumb:hover {
+background-color:#bbb;
+}
